force-app/main/default/objects/Error_Notification__c/Error_Notification__c.object-meta.xml
<CustomObject>
    <description>Notifications sent to a user after a recognized error</description>
    <label>Error Notification</label>
    <nameField>
        <displayFormat>EN-{0000}</displayFormat>
        <label>Error Notification Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Notifications</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>