force-app/main/default/objects/Error_Notification__c/fields/ERP_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>ERP_Record_Id__c</fullName>
    <description>The ERP ID of the record linked to the error notification</description>
    <label>ERP Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>