force-app/main/default/objects/Error_Notification__c/fields/Interface_Log__c.field-meta.xml
<CustomField>
    <fullName>Interface_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The log record from the interface call. Can be useful to see what transaction was being attempted</description>
    <label>Interface Log</label>
    <referenceTo>Interface_Log__c</referenceTo>
    <relationshipLabel>Error Notifications</relationshipLabel>
    <relationshipName>Error_Notification_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>