force-app/main/default/objects/Error_Notification__c/fields/Known_Error_Notification__c.field-meta.xml
<CustomField>
    <fullName>Known_Error_Notification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The known error which occurred. That record describes the class or interface, the identifying error text, and who should be notified.</description>
    <label>Known Error Notification</label>
    <referenceTo>Known_Error_Notification__c</referenceTo>
    <relationshipLabel>Error Notifications</relationshipLabel>
    <relationshipName>Error_Notifications</relationshipName>
    <type>Lookup</type>
</CustomField>