force-app/main/default/objects/Error_Notification__c/fields/Line_Number__c.field-meta.xml
<CustomField>
    <fullName>Line_Number__c</fullName>
    <description>Line Number of Class where exception occurred.</description>
    <label>Line Number</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>