force-app/main/default/objects/Error_Notification__c/fields/Related_Record__c.field-meta.xml
<CustomField>
    <fullName>Related_Record__c</fullName>
    <description>Id of record for which some known error occurred</description>
    <label>Related Record</label>
    <length>18</length>
    <type>Text</type>
</CustomField>