force-app/main/default/objects/Error_Notification__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Where did this error come from? Which interface, which trigger, etc.</description>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>