force-app/main/default/objects/Error_Notification__c/fields/Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>Stack_Trace__c</fullName>
    <description>The Stack Trace from a checked exception.</description>
    <label>Stack Trace</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>