force-app/main/default/objects/Error_Notification__c/recordTypes/Apex_Exceptions.recordType-meta.xml
<RecordType>
    <fullName>Apex_Exceptions</fullName>
    <active>true</active>
    <description>Error Notifications generated as part of Apex Exceptions</description>
    <label>Apex Exceptions</label>
</RecordType>