force-app/main/default/objects/Error_Notification__c/recordTypes/Interface_Errors.recordType-meta.xml
<RecordType>
    <fullName>Interface_Errors</fullName>
    <active>true</active>
    <description>Error Notifications generated as part of Interface Errors.</description>
    <label>Interface Errors</label>
</RecordType>