force-app/main/default/objects/Error_Notification__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Source__c</columns>
    <columns>Result__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Known_Error_Notification__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>