force-app/main/default/objects/Error_Notification__c/listViews/Apex_Exceptions.listView-meta.xml
<ListView>
    <fullName>Apex_Exceptions</fullName>
    <columns>NAME</columns>
    <columns>Source__c</columns>
    <columns>Result__c</columns>
    <columns>Type__c</columns>
    <columns>Known_Error_Notification__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Error_Notification__c.Apex_Exceptions</value>
    </filters>
    <label>Apex Exceptions</label>
    <language>en_US</language>
</ListView>