force-app/main/default/objects/Error_Notification__c/listViews/Interface_Errors.listView-meta.xml
<ListView>
    <fullName>Interface_Errors</fullName>
    <columns>NAME</columns>
    <columns>Source__c</columns>
    <columns>Result__c</columns>
    <columns>Known_Error_Notification__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Error_Notification__c.Interface_Errors</value>
    </filters>
    <label>Interface Errors</label>
    <language>en_US</language>
</ListView>